@@ -1,6 +1,7 @@
 2010-??-??: 2.05
 	all : allow -D noopt to turn off optimizer
 	js : added js.Scroll
+	js : package names are now checked at runtime to avoid clashes with existing libs
 
 2009-07-26: 2.04
 	flash9 : fixed get_full_path error with -D fdb
